service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: default  # Modifie si besoin
spec:
  type: LoadBalancer
  selector:
    app: api  
  ports:
    - protocol: TCP
      port: 8090          # Port d'écoute du service
      targetPort: 80  # Port exposé par ton conteneur API
