service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: ingress-nginx
spec:
  type: 
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000  # Ajuste le port cible selon ton application
