service-ia.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-app-service
  namespace: default
spec:
  selector:
    app: ai-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
