service-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None  # Cela signifie que ce service fonctionnera comme un headless service pour un accès direct par IP
